--- a/Prosush.ipynb
+++ b/Prosush.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Product Recommendation\n",
+    "## Product Recommendation: Enhancing Sales Strategies with Market Basket Analysis\n",
     "By Sushminder Singh"
    ]
   },
